# subridere

./: .gitignore  Cargo.toml  shell.nix
crates/bevy_ui_actions/: Cargo.toml
crates/bevy_ui_actions/examples/: counter.rs  drag_drop.rs  inventory_demo.rs  menu.rs  progress_bar.rs  rich_tooltip.rs  right_click.rs  selection.rs  tabs.rs
crates/bevy_ui_actions/src/: action.rs  builder.rs  button.rs  click.rs  drag.rs  helpers.rs  hover.rs  lib.rs  observer.rs  plugin.rs  prelude.rs  right_click.rs  style.rs  systems.rs  tooltip.rs  visual.rs
crates/bevy_ui_actions/src/core/: action.rs  helpers.rs  mod.rs
crates/bevy_ui_actions/src/interactions/: click.rs  drag.rs  hover.rs  mod.rs  right_click.rs
crates/bevy_ui_actions/src/widgets/: mod.rs  progress_bar.rs  tabs.rs  tooltip.rs  visual.rs
crates/block-bodies-core/: Cargo.toml
crates/block-bodies-core/src/: body.rs  error.rs  ik.rs  joint.rs  lib.rs  part.rs  serialization.rs
crates/subridere-core/: Cargo.toml  build.rs
crates/subridere-core/assets/items/: chainmail_vest.item.ron  gold_ring.item.ron  health_potion.item.ron  iron_gauntlet_left.item.ron  iron_gauntlet_right.item.ron  iron_helmet.item.ron  iron_sword.item.ron  leather_boot_left.item.ron  leather_boot_right.item.ron  mana_potion.item.ron  torch.item.ron  vitality_helm.item.ron  wooden_shield.item.ron  wooden_staff.item.ron
crates/subridere-core/assets/items/armor/: iron_helmet.item.ron
crates/subridere-core/assets/items/weapons/: wooden_staff.item.ron
crates/subridere-core/assets/models/: humanoid.ron  jimbo.ron  worm_big.ron
crates/subridere-core/assets/visuals/items/: iron_helmet.visual.ron  wooden_staff.visual.ron
crates/subridere-core/src/: app.rs  lib.rs  main.rs
crates/subridere-core/src/animation/: arms.rs  events.rs  mod.rs  plugin.rs
crates/subridere-core/src/app/: mod.rs  state.rs
crates/subridere-core/src/audio/: background.rs  mod.rs  plugin.rs
crates/subridere-core/src/audio/player/: damage.rs
crates/subridere-core/src/audio/weapons/: events.rs  mod.rs  sounds.rs
crates/subridere-core/src/audio/worm/: events.rs  sounds.rs
crates/subridere-core/src/block_bodies/animation/: apply.rs  mod.rs  plugin.rs  system.rs
crates/subridere-core/src/camera/: controller.rs  mod.rs  plugin.rs
crates/subridere-core/src/core/: components.rs  mod.rs
crates/subridere-core/src/enemies/: components.rs  mod.rs  plugin.rs
crates/subridere-core/src/enemies/worm/: animation.rs  attack.rs  behavior.rs  components.rs  damage.rs  death.rs  detection.rs  health.rs  mod.rs  movement.rs  particles.rs  (+3 more)
crates/subridere-core/src/enemy/: system.rs
crates/subridere-core/src/fighting/: components.rs  events.rs  mod.rs  plugin.rs  weapon.rs
crates/subridere-core/src/game_init/: assets.rs  enemies.rs  lighting.rs  loot.rs  maze_rooms.rs  menu_camera.rs  mod.rs  player.rs  plugin.rs  state.rs  win_condition.rs
crates/subridere-core/src/input/: cursor.rs  mod.rs  plugin.rs  resources.rs
crates/subridere-core/src/inventory/: component.rs  mod.rs  plugin.rs
crates/subridere-core/src/items/: component.rs  definition.rs  flags.rs  loader.rs  mod.rs  plugin.rs  registry.rs  slots.rs  spawn.rs  stack.rs  world.rs
crates/subridere-core/src/player/: component.rs  mod.rs
crates/subridere-core/src/stats/: formulas.rs  mod.rs  plugin.rs  recalculate.rs
crates/subridere-core/src/ui/: mod.rs
crates/subridere-core/src/unit/: component.rs  plugin.rs
crates/subridere-core/src/utils/: animated_body.rs  block_body.rs  mesh_merge.rs  mod.rs
crates/subridere-core/src/world/: mod.rs
(+323 files in other folders)
