[package]
name = "subridere"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
"animation",
"bevy_winit", 
"bevy_asset", 
"bevy_pbr", 
"bevy_gltf", 
"bevy_render",
"bevy_ui",
"bevy_text",
"png", 
"x11", 
"tonemapping_luts"] }
bevy_rapier3d = { version = "0.30.0", features = [ "simd-stable", "debug-render-3d" ] }
rand = "0.8"
bevy_kira_audio = { version = "0.23", features = ["wav"] }

#[profile.dev]
#opt-level = 3
#debug = true
#overflow-checks = true
#incremental = true
#lto = false
