[package]
name = "subridere"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
"animation",
"bevy_asset", 
"bevy_gltf", 
"bevy_pbr", 
"bevy_render",
"bevy_state",
"bevy_text",
"bevy_ui",
"bevy_winit", 
"png", 
"x11", 
"tonemapping_luts"] }
bevy_rapier3d = { version = "0.30.0", features = [ "simd-stable", "debug-render-3d" ] }
fastrand = "2.3.0"
rand = "0.8"
bevy_kira_audio = { version = "0.23", features = ["wav"] }
ron = "0.10.1"
serde = "1.0.219"
thiserror = "2.0.12"
tracing = "0.1.41"

#[profile.dev]
#opt-level = 3
#debug = true
#overflow-checks = true
#incremental = true
#lto = false
