[workspace]
resolver = "3"
members = [
    "crates/block-bodies-core",
    "crates/bevy_ui_actions",
    "crates/subridere-skeleton", 
    "crates/subridere-core",
    "crates/subridere-game"
]

[workspace.dependencies]
bevy = { version = "0.16.1", default-features = false }
serde = "1.0.219"
ron = "0.10.1"
thiserror = "2.0.12"
tracing = "0.1.41"
