[package]
name = "block-bodies-core"
version = "0.1.0"
edition = "2021"
description = "Core library for hierarchical block-based bodies with kinematics"

[dependencies]
glam = { version = "0.29", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
slotmap = { version = "1.0", features = ["serde"] }
thiserror = "1.0"
ron = "0.8"

[dev-dependencies]
tempfile = "3.0"
