[package]
name = "subridere-legacy"
resolver = "3"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true, features = [
    "animation", "bevy_asset", "bevy_gltf", "bevy_pbr", 
    "bevy_render", "bevy_state", "bevy_text", "bevy_ui",
    "bevy_winit", "png", "x11", "tonemapping_luts"
] }
bevy_rapier3d = { version = "0.30.0", features = ["simd-stable", "debug-render-3d"] }
bevy_kira_audio = { version = "0.23", features = ["wav"] }
block-bodies-core = { path = "../block-bodies-core" }
fastrand = "2.3.0"
rand = "0.8"
ron = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
